# taru

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  taru-config.yaml
pkg/brew/: taru-bin.rb
src/: errors.rs  main.rs  parser.rs  runner.rs
