[package]
name = "taru"
version = "0.2.0"
edition = "2021"
description = "A simple local-first workflow runner for unix-based systems."
readme = "README.md"
homepage = "https://github.com/RasmusNygren/taru"
repository = "https://github.com/RasmusNygren/taru"
keywords = ["workflow", "task", "automate"]
categories = ["command-line-utilities", "development-tools::build-utils"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4"
simple_logger = "4.1.0"
